# battle-ia-lib

./: .gitignore  Dockerfile  README.md  build_run.sh  goTank.sh  meson.build
.cache/clangd/index/: battle_c.cpp.E7D5B287DE6D5FDD.idx  battle_c.h.187FAD88347127BE.idx  list.cpp.D3D165C371E988F4.idx  list.hpp.D09927E7997DD868.idx  main.c.786B3B5147AEF0C1.idx  tcp_client.cpp.7F5C73812B7AD41E.idx  tcp_client.hpp.EA3F1D8C6D4758F2.idx
include/: main.h  movement.h  radar.h  shoot.h  tool.h
src/: main.c  movement.c  radar.c  shoot.c  tool.c
subprojects/battle_c/: .dockerignore  battle_c.proto  meson.build
subprojects/battle_c/.cache/clangd/index/: battle_c.cpp.2AD7322DDA047663.idx  battle_c.h.DC03054666F96254.idx  battle_c.pb.cc.193D9B70D873490B.idx  battle_c.pb.h.036C6BA51116674A.idx  list.cpp.15F16E07E6824852.idx  list.hpp.2BB5DFB2CB033F6D.idx  main.cpp.3B72B245652E2542.idx  main.cpp.B8254F0EF3F6213A.idx  tcp_client.cpp.FF7952C8AD325193.idx  tcp_client.hpp.31C4C9A995F10EE4.idx
subprojects/battle_c/include/: battle_c.h  list.hpp  tcp_client.hpp
subprojects/battle_c/src/: battle_c.cpp  list.cpp  meson.build  tcp_client.cpp
subprojects/battle_c/src/test_client/: main.cpp  meson.build
